--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_video">Video Activity</string>
     <string name="video_button">Go to the Video</string>
+    <string name="pause">PAUSE</string>
+    <string name="play">PLAY</string>
+    <string name="title_activity_sound_activity_two">Sound Activity</string>
 </resources>
